@@ -36,97 +36,97 @@
 
 #import "UIxCalDayView.h"
 
-@interface UIxCalDayView (PrivateAPI)
-- (BOOL)isCurrentDateInApt:(id)_apt;
-- (NSArray *)_getDatesFrom:(NSCalendarDate *)_from to:(NSCalendarDate *)_to;
-@end
+// @interface UIxCalDayView (PrivateAPI)
+// - (BOOL)isCurrentDateInApt:(id)_apt;
+// - (NSArray *)_getDatesFrom:(NSCalendarDate *)_from to:(NSCalendarDate *)_to;
+// @end
 
 @implementation UIxCalDayView
 
-- (void) dealloc
-{
-  [self->currentDate release];
-  [super dealloc];
-}
+// - (void) dealloc
+// {
+//   [self->currentDate release];
+//   [super dealloc];
+// }
 
-- (void) setCurrentDate: (NSCalendarDate *) _date
-{
-  ASSIGN(self->currentDate, _date);
-}
+// - (void) setCurrentDate: (NSCalendarDate *) _date
+// {
+//   ASSIGN(self->currentDate, _date);
+// }
 
-- (NSCalendarDate *) currentDate
-{
-  return self->currentDate;
-}
+// - (NSCalendarDate *) currentDate
+// {
+//   return self->currentDate;
+// }
 
-- (BOOL) isCurrentDateInApt
-{
-  return [self isCurrentDateInApt: [self appointment]];
-}
+// - (BOOL) isCurrentDateInApt
+// {
+//   return [self isCurrentDateInApt: [self appointment]];
+// }
 
-- (BOOL) isCurrentDateInApt: (id) _apt
-{
-  NSCalendarDate *dateStart, *dateEnd, *aptStart, *aptEnd;
-  NGCalendarDateRange *dateRange, *aptRange;
+// - (BOOL) isCurrentDateInApt: (id) _apt
+// {
+//   NSCalendarDate *dateStart, *dateEnd, *aptStart, *aptEnd;
+//   NGCalendarDateRange *dateRange, *aptRange;
     
-  dateStart = self->currentDate;
-  dateEnd   = [dateStart dateByAddingYears:0 months:0 days:0
-                         hours:1 minutes:0 seconds:0];
-  dateRange = [NGCalendarDateRange calendarDateRangeWithStartDate:dateStart
-                                   endDate:dateEnd];
-  aptStart = [self->appointment valueForKey:@"startDate"];
-  aptEnd   = [self->appointment valueForKey:@"endDate"];
-  aptRange = [NGCalendarDateRange calendarDateRangeWithStartDate:aptStart
-                                  endDate:aptEnd];
+//   dateStart = self->currentDate;
+//   dateEnd   = [dateStart dateByAddingYears:0 months:0 days:0
+//                          hours:1 minutes:0 seconds:0];
+//   dateRange = [NGCalendarDateRange calendarDateRangeWithStartDate:dateStart
+//                                    endDate:dateEnd];
+//   aptStart = [self->appointment valueForKey:@"startDate"];
+//   aptEnd   = [self->appointment valueForKey:@"endDate"];
+//   aptRange = [NGCalendarDateRange calendarDateRangeWithStartDate:aptStart
+//                                   endDate:aptEnd];
 
-  return [dateRange doesIntersectWithDateRange:aptRange];
-}
+//   return [dateRange doesIntersectWithDateRange:aptRange];
+// }
 
-- (NSArray *) dateRange
-{
-  /* default range is from dayStartHour to dayEndHour. Any values before
-     or after are also fine */
+// - (NSArray *) dateRange
+// {
+//   /* default range is from dayStartHour to dayEndHour. Any values before
+//      or after are also fine */
 
-  NSCalendarDate *min, *max;
-  NSArray        *aptDateRanges;
+//   NSCalendarDate *min, *max;
+//   NSArray        *aptDateRanges;
 
-  min = [[self startDate] hour:[self dayStartHour] minute:0];
-  max = [[self startDate] hour:[self dayEndHour]   minute:0];
+//   min = [[self startDate] hour:[self dayStartHour] minute:0];
+//   max = [[self startDate] hour:[self dayEndHour]   minute:0];
 
-  aptDateRanges = [[self appointments] valueForKey: @"startDate"];
-  if([aptDateRanges count] != 0) {
-    NSCalendarDate *d;
+//   aptDateRanges = [[self appointments] valueForKey: @"startDate"];
+//   if([aptDateRanges count] != 0) {
+//     NSCalendarDate *d;
 
-    aptDateRanges
-      = [aptDateRanges sortedArrayUsingSelector: @selector(compareAscending:)];
-    d   = [aptDateRanges objectAtIndex:0];
-    if ([d isDateOnSameDay:min])
-      min = (NSCalendarDate *)[d earlierDate:min];
-    d   = [aptDateRanges objectAtIndex:[aptDateRanges count] - 1];
-    if ([d isDateOnSameDay:max])
-      max = (NSCalendarDate *)[d laterDate:max];
-  }
+//     aptDateRanges
+//       = [aptDateRanges sortedArrayUsingSelector: @selector(compareAscending:)];
+//     d   = [aptDateRanges objectAtIndex:0];
+//     if ([d isDateOnSameDay:min])
+//       min = (NSCalendarDate *)[d earlierDate:min];
+//     d   = [aptDateRanges objectAtIndex:[aptDateRanges count] - 1];
+//     if ([d isDateOnSameDay:max])
+//       max = (NSCalendarDate *)[d laterDate:max];
+//   }
   
-  return [self _getDatesFrom:min to:max];
-}
+//   return [self _getDatesFrom:min to:max];
+// }
 
-- (NSArray *) _getDatesFrom: (NSCalendarDate *) _from
-                         to: (NSCalendarDate *) _to
-{
-  NSMutableArray *dates;
-  unsigned       i, count, offset;
+// - (NSArray *) _getDatesFrom: (NSCalendarDate *) _from
+//                          to: (NSCalendarDate *) _to
+// {
+//   NSMutableArray *dates;
+//   unsigned       i, count, offset;
 
-  offset = [_from hourOfDay];
-  count  = ([_to hourOfDay] + 1) - offset;
-  dates  = [[NSMutableArray alloc] initWithCapacity:count];
-  for(i = 0; i < count; i++) {
-    NSCalendarDate *date;
+//   offset = [_from hourOfDay];
+//   count  = ([_to hourOfDay] + 1) - offset;
+//   dates  = [[NSMutableArray alloc] initWithCapacity:count];
+//   for(i = 0; i < count; i++) {
+//     NSCalendarDate *date;
         
-    date = [_from hour:offset + i minute:0];
-    [dates addObject:date];
-  }
-  return [dates autorelease];
-}
+//     date = [_from hour:offset + i minute:0];
+//     [dates addObject:date];
+//   }
+//   return [dates autorelease];
+// }
 
 /* URLs */
 
@@ -156,12 +156,12 @@
   NSString *hmString;
   NSCalendarDate *date;
     
-  date = [self currentDate];
+  date = [self selectedDate];
   hmString = [NSString stringWithFormat:@"%.2d%.2d",
                        [date hourOfDay], [date minuteOfHour]];
   qp = [[self queryParameters] mutableCopy];
   [self setSelectedDateQueryParameter:date inDictionary:qp];
-  [qp setObject:hmString forKey:@"hm"];
+  [qp setObject: hmString forKey:@"hm"];
   return [qp autorelease];
 }
 
@@ -172,92 +172,49 @@
   return [[self selectedDate] beginOfDay];
 }
 
-- (NSCalendarDate *) endDate
-{
-  return [[self selectedDate] endOfDay];
-}
-
 /* appointments */
 
-- (NSArray *) appointments
-{
-  return [self fetchCoreAppointmentsInfos];
-}
-
-- (NSArray *)aptsForCurrentDate {
-  NSArray        *apts;
-  NSMutableArray *filtered;
-  unsigned       i, count;
-  NSCalendarDate *start, *end;
-
-  start = self->currentDate;
-  end   = [start dateByAddingYears:0
-                            months:0
-                              days:0
-                             hours:0
-                           minutes:59
-                           seconds:59];
+// - (NSArray *)allDayApts {
+//   NSCalendarDate *start;
+//   NSArray        *apts;
+//   NSMutableArray *filtered;
+//   unsigned       i, count;
   
-  apts     = [self appointments];
-  filtered = [[NSMutableArray alloc] initWithCapacity:1];
-  count    = [apts count];
-  for (i = 0; i < count; i++) {
-    id apt;
-    NSCalendarDate *aptStartDate;
+//   if (self->allDayApts)
+//     return self->allDayApts;
+
+//   start    = [self startDate];
+//   apts     = [self appointments];
+//   filtered = [[NSMutableArray alloc] initWithCapacity:1];
+//   count    = [apts count];
+//   for (i = 0; i < count; i++) {
+//     id       apt;
+//     NSNumber *bv;
     
-    apt = [apts objectAtIndex:i];
-    aptStartDate = [apt valueForKey:@"startDate"];
-    if([aptStartDate isGreaterThanOrEqualTo:start] &&
-       [aptStartDate isLessThan:end])
-    {
-      [filtered addObject:apt];
-    }
-  }
+//     apt = [apts objectAtIndex:i];
+//     bv  = [apt valueForKey:@"isallday"];
+//     if ([bv boolValue]) {
+//       [filtered addObject:apt];
+//     }
+//     else {
+//       NSCalendarDate *aptStartDate;
+
+//       aptStartDate = [apt valueForKey:@"startDate"];
+//       if([aptStartDate isLessThan:start]) {
+//         [filtered addObject:apt];
+//       }
+//     }
+//   }
   
-  return [filtered autorelease];
-}
+//   ASSIGN(self->allDayApts, filtered);
+//   [filtered release];
+//   return self->allDayApts;
+// }
 
-- (NSArray *)allDayApts {
-  NSCalendarDate *start;
-  NSArray        *apts;
-  NSMutableArray *filtered;
-  unsigned       i, count;
-  
-  if (self->allDayApts)
-    return self->allDayApts;
-
-  start    = [self startDate];
-  apts     = [self appointments];
-  filtered = [[NSMutableArray alloc] initWithCapacity:1];
-  count    = [apts count];
-  for (i = 0; i < count; i++) {
-    id       apt;
-    NSNumber *bv;
-    
-    apt = [apts objectAtIndex:i];
-    bv  = [apt valueForKey:@"isallday"];
-    if ([bv boolValue]) {
-      [filtered addObject:apt];
-    }
-    else {
-      NSCalendarDate *aptStartDate;
-
-      aptStartDate = [apt valueForKey:@"startDate"];
-      if([aptStartDate isLessThan:start]) {
-        [filtered addObject:apt];
-      }
-    }
-  }
-  
-  ASSIGN(self->allDayApts, filtered);
-  [filtered release];
-  return self->allDayApts;
-}
-
-- (BOOL) hasAptsForCurrentDate
-{
-  return [[self aptsForCurrentDate] count] != 0;
-}
+// - (BOOL) hasAptsForCurrentDate
+// {
+//   return [[self aptsForCurrentDate] count] != 0;
+// }
 
 - (NSString *) _dayNameWithOffsetFromToday: (int) offset
 {
